# yahoo-nba-fantasy-dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  work_plan.md
app/: __init__.py  config.py  logging_config.py
app/database/: __init__.py  connection.py  models.py
app/parsing/: __init__.py  helpers.py  scoreboard.py  standings.py  transactions.py
app/services/: transactions.py  yahoo_api.py
app/visualization/: __init__.py
backend/: main.py
backend/routes/: api.py  auth.py
dashboard/: app.py  main.py
dashboard/pages/: home.py  weekly.py
dashboard/views/: home.py  periodical.py  transactions.py  weekly.py
docs/: BACKLOG.md  DECISIONS.md  ISSUES_LOG.md  LOCAL_DEVELOPMENT.md  OAUTH_ARCHITECTURE.md  PROGRESS.md
scripts/: migrate_add_sync_tracking.py
tests/: test_logging_config.py  test_parsing.py  test_transactions.py
