[project]
name = "yahoo-fantasy-dashboard"
version = "0.1.0"
description = "Web dashboard for Yahoo Fantasy Basketball"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.31.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "authlib>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.1.0",
    "python-dateutil>=2.8.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "backend*", "dashboard*"]
